vlib/v/checker/tests/for_in_string_err.out
vlib/v/checker/tests/for_in_string_err.vv:2:11: error: for in: cannot index `string`, use `string.bytes()` or `string.runes()` instead
    1 | fn main() {
    2 |     for r in 'test' {
      |              ~~~~~~
    3 |         println(r)
    4 |     }
