vlib/v/checker/tests/for_in_string_err.vv
fn main() {
	for r in 'test' {
		println(r)
	}
}
